meson: Use warning_level instead of -Wall manually

--- a/meson.build
+++ b/meson.build
@@ -1,10 +1,12 @@
 project('ltree', 'c',
     version: '0.1.0',
-    default_options: ['c_std=gnu11'],
+    default_options: [
+        'c_std=gnu11',
+        'warning_level=3',
+    ],
 )
 
 cc = meson.get_compiler('c')
-add_project_arguments(cc.get_supported_arguments(['-Wall']), language: 'c')
 
 python_snippet = '''
 import sys, subprocess
